tests/errors/flow/if-condition-not-bool.fn
---
Description: If condition is an integer not a bool
Expected: FN3406
---

type Program
{
    fn Main -> i32
    {
        if (1)
        {
            var y = 1
        }
        return 0
    }
}
